[package]
name = "fastqgen"
version = "0.1.4"
edition = "2024"
authors = ["Daniel A. Sprague"]
license = "MIT"
description = "Random paired fastq file generation. Nothing more, nothing less."
repository = "https://github.com/dan-sprague/fastqgen"
keywords = ["fastq","generate","bioinformatics"]
[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
